@@ -1,2 +1,5 @@
+[B]Versino 1.0.1[/B]
+- Fixed logos
+
 [B]Version 1.0.0[/B]
 - Initial version
